# etptypes-python

./: .gitignore  README.md  pyproject.toml
.github/actions/: build.yml
.github/actions/generate/: action.yml
.github/actions/prepare-poetry/: action.yml
.github/workflows/: ci-test.yml  pypi-test.yml  release.yml
.github/workflows/partials/: build.yml
