[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "etptypes"
version = "0.0.0"
description = "ETP Python dev kit"
authors = [
  { name = "Lionel Untereiner", email = "lionel.untereiner@geosiris.com" },
  { name = "Valentin Gauthier", email = "valentin.gauthier@geosiris.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9, <4.0"
keywords = ["ETP"]

dependencies = [
  "pydantic<2.0.0", # Some dependencies are not compatible with pydantic > 2.0.0
  "typingx>=0.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "beartype",
  "mypy"
]

[project.urls]
homepage = "http://www.geosiris.com"
repository = "https://github.com/geosiris-technologies/etptypes-python"
bug-tracker = "https://github.com/geosiris-technologies/etptypes-python/issues"

[project.scripts]
etp-cli = "etptypes.cli:main"

[tool.setuptools]
packages = ["etptypes"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.mypy]
strict = true
